fix: fix register & config api
